# locusagent

./: .dockerignore  .env.example  .gitignore  AGENT.md  CLAUDE.md  Caddyfile  LICENSE  README.md  README.zh-CN.md  build-desktop.sh  cliff.toml  docker-compose.yml  pyproject.toml  rebuild.sh
agent/: Dockerfile  pyproject.toml
agent/src/agentpod_agent/: __init__.py  activity.py  auth.py  config.py  db.py  errors.py  host_internal.py  host_mcp_oauth.py  host_notifications.py  host_notify.py  host_scheduled_tasks.py  host_settings.py  latex_normalize.py  logging.py  main.py  subprocess_env.py  subprocess_sandbox.py  tool_settings.py  usage_report.py  version.py  workspace.py  workspace_runtime.py  workspace_summary.py
agent/src/agentpod_agent/artifacts/: __init__.py  store.py
agent/src/agentpod_agent/core/: __init__.py  attachment_images.py  background_review.py  context.py  llm.py  llm_classifier.py  loop.py  memory_autostore.py  models.py  openai_fields.py  persistence.py  post_run.py  run_context.py  run_manager.py  scheduled_run.py  session_title.py  system_prompt.py  tool_guardrails.py  write_origin.py
agent/src/agentpod_agent/env_vars/: __init__.py  store.py
agent/src/agentpod_agent/hooks/: __init__.py  catalog.py  context.py  loader.py  store.py
agent/src/agentpod_agent/mcp_/: client.py  config.py  oauth.py  probe.py
agent/src/agentpod_agent/memory/: __init__.py  curator.py  embedder.py  queue.py  store.py
agent/src/agentpod_agent/recall/: fts.py  messages.py  pipeline.py
agent/src/agentpod_agent/routers/: __init__.py  internal.py  v1.py  v1_sessions.py  workspace.py
agent/src/agentpod_agent/security/: guard.py
agent/src/agentpod_agent/skills/: __init__.py  fs.py  install.py  loader.py  reflect.py  store.py
agent/src/agentpod_agent/storage/: __init__.py  attachments.py
agent/src/agentpod_agent/todos/: __init__.py  intent.py  store.py
agent/src/agentpod_agent/tools/: __init__.py  agent_hooks.py  agentpod.py  artifacts.py  attachments.py  base.py  clarify.py  context_distill.py  deliver_file.py  env_vars.py  execute_code.py  fs.py  manage_workspace.py  mcp_manage.py  memory.py  minio.py  notifications.py  proc_env.py  registry.py  scheduled_tasks.py  session_delete.py  session_recall.py  session_search.py  skills.py  terminal.py  todo.py  user_info.py  web.py
agent/src/locus_agent/: __init__.py  activity.py  auth.py  config.py  db.py  embedding_progress.py  host_notify.py  host_scheduled_tasks.py  host_settings.py  latex_normalize.py  logging.py  subprocess_env.py  tool_settings.py  version.py  workspace.py  workspace_runtime.py  workspace_summary.py
agent/src/locus_agent/artifacts/: store.py
agent/src/locus_agent/core/: __init__.py  attachment_documents.py  attachment_sniff.py  auxiliary_completion.py  background_review.py  completion_limits.py  context.py  llm.py  loop.py  models.py  openai_fields.py  persistence.py  post_run.py  run_context.py  run_manager.py  run_sse.py  scheduled_run.py  session_review_state.py  session_title.py  stream_health.py  system_prompt.py  tool_guardrails.py  tool_timing.py
agent/src/locus_agent/env_vars/: store.py
agent/src/locus_agent/mcp_/: __init__.py  client.py  oauth.py  probe.py
agent/src/locus_agent/memory/: __init__.py  curator.py  embedder.py  queue.py
agent/src/locus_agent/recall/: __init__.py  hybrid.py
agent/src/locus_agent/routers/: __init__.py  v1.py  workspace.py
agent/src/locus_agent/security/: __init__.py
agent/src/locus_agent/skills/: chunking.py  embeddings.py  install.py  loader.py  router.py  store.py
agent/src/locus_agent/storage/: __init__.py  attachments.py
agent/src/locus_agent/todos/: __init__.py  intent.py
agent/src/locus_agent/tools/: __init__.py  args.py  artifacts.py  attachments.py  clarify.py  context_distill.py  deliver_file.py  execute_code.py  fs.py  locusagent.py  mcp_manage.py  proc_env.py  registry.py  scheduled_tasks.py  session_delete.py  session_recall.py  session_search.py  skills.py  terminal.py  terminal_approval.py  todo.py  user_info.py  web.py
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: desktop-prefs.toml  quick-chat.toml
desktop/src-tauri/permissions/autogenerated/: open_oauth_login.toml
desktop/src-tauri/resources/: sidecar-venv-link
desktop/src-tauri/src/: app_settings.rs  desktop_devtools.rs  desktop_prefs.rs  external_links.rs  gateway.rs  lib.rs  locusagent_paths.rs  main.rs  menu_bar_icon.rs  quick_chat.rs  sidecar.rs  tray.rs  webview_devtools.rs
host/: Dockerfile  pyproject.toml
host/src/agentpod_host/: __init__.py  agent_fetch.py  agent_service.py  app_cache.py  audit.py  config.py  internal_paths.py  internal_proxy_headers.py  internal_proxy_limits.py  llm_models.py  llm_proxy_paths.py  llm_url.py  logging.py  main.py  oauth_external.py  redis_client.py  usage.py  version.py  workspaces.py
host/src/agentpod_host/auth/: __init__.py  agent_internal.py  auto_session.py  dependencies.py  session.py
host/src/agentpod_host/db/: __init__.py  legacy.py  migrate.py  models.py  session.py
host/src/agentpod_host/mcp_oauth/: service.py  store.py
host/src/agentpod_host/middleware/: __init__.py  auth_isolation.py  internal_network.py
host/src/agentpod_host/notifications/: hub.py  service.py
host/src/locus_host/: __init__.py  agent_fetch.py  app_cache.py  bootstrap.py  config.py  internal_proxy_limits.py  llm_models.py  llm_url.py  logging.py  oauth_external.py  url_guard.py  usage.py  version.py  workspaces.py
shared/: pyproject.toml  settings.example.json
shared/src/agentpod_shared/: local_embeddings.py  local_storage.py  settings_store.py
shared/src/locus_shared/: __init__.py  activity_log.py  local_embeddings.py  local_storage.py  memory_cache.py  paths.py  ports.py  session_titles.py  settings_store.py  workspace_ids.py  workspace_venv.py
sidecar/: pyproject.toml
sidecar/src/agentpod/: __main__.py  cli.py  main.py
sidecar/src/locusagent/: __init__.py  __main__.py  cli.py  main.py
(+414 files in other folders)
