[project]
name = "agentpod"
version = "0.1.0"
description = "Self-hosted AI Agent platform with per-user Docker workspaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["host", "agent"]

[tool.uv.sources]
agentpod-host = { workspace = true }
agentpod-agent = { workspace = true }

[dependency-groups]
dev = [
    "agentpod-host",
    "agentpod-agent",
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
