[project]
name = "agentpod-workspace"
version = "0.1.16"
description = "AgentPod desktop AI agent platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["shared", "host", "agent", "sidecar"]

[tool.uv.sources]
agentpod-shared = { workspace = true }
agentpod-host = { workspace = true }
agentpod-agent = { workspace = true }
agentpod-sidecar = { workspace = true }

[dependency-groups]
dev = [
    "agentpod-shared",
    "agentpod-host",
    "agentpod-agent",
    "agentpod-sidecar",
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["shared/src", "host/src", "agent/src", "sidecar/src"]
