[project]
name = "locus-workspace"
version = "0.3.0"
description = "Locus Agent desktop AI agent platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["shared", "host", "agent", "sidecar"]

[tool.uv.sources]
locus-shared = { workspace = true }
locus-host = { workspace = true }
locus-agent = { workspace = true }
locus-sidecar = { workspace = true }

[dependency-groups]
dev = [
    "locus-shared",
    "locus-host",
    "locus-agent",
    "locus-sidecar",
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["shared/src", "host/src", "agent/src", "sidecar/src"]
