[project]
name = "locus-agent"
version = "0.4.0"
description = "Locus Agent agent: per-user container with chat loop, tools, skills, MCP, memory"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    "structlog>=24.4",
    "tenacity>=9.0",
    "tiktoken>=0.13.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "locus-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/locus_agent"]
