[project]
name = "agentpod-host"
version = "0.1.0"
description = "AgentPod host: web server, OAuth, orchestrator, API proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "itsdangerous>=2.2",
    "cryptography>=43.0",
    "docker>=7.1",
    "authlib>=1.3",
    "python-multipart>=0.0.9",
    "structlog>=24.4",
    "croniter>=2.0",
    "minio>=7.2",
    "redis>=5.0",
    "procrastinate>=2.15",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpod_host"]
