[project]
name = "locus-host"
version = "0.2.0"
description = "Locus Agent host: session, settings, API proxy"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "itsdangerous>=2.2",
    "cryptography>=43.0",
    "authlib>=1.3",
    "python-multipart>=0.0.9",
    "structlog>=24.4",
    "croniter>=2.0",
    "mcp>=1.27",
    "locus-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/locus_host"]
