[project]
name = "locus-shared"
version = "0.3.1"
description = "Locus Agent shared: settings, local storage, embeddings, memory cache"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "fastembed>=0.6",
    "numpy>=1.26",
    "cryptography>=43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/locus_shared"]
