[project]
name = "agentpod-sidecar"
version = "0.1.5"
description = "AgentPod desktop sidecar entry (host + agent monolith)"
requires-python = ">=3.11"
dependencies = [
    "agentpod-host",
    "agentpod-agent",
    "agentpod-shared",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
agentpod-serve = "agentpod.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpod"]
