[project]
name = "locus-sidecar"
version = "0.3.2"
description = "Locus Agent desktop sidecar entry (host + agent monolith)"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "locus-host",
    "locus-agent",
    "locus-shared",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
locusagent-serve = "locusagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/locusagent"]
