[package]
name = "agentpod-desktop"
version = "0.1.8"
description = "AgentPod macOS desktop shell"
authors = ["AgentPod"]
edition = "2021"

[lib]
name = "agentpod_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
http-body-util = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
