[package]
name = "agentpod-desktop"
version = "0.1.18"
description = "AgentPod macOS desktop shell"
authors = ["AgentPod"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "agentpod_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tracing = "0.1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSImage", "NSStatusItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
