[package]
name = "locusagent-desktop"
version = "0.3.1"
description = "Locus Agent macOS desktop shell"
authors = ["Locus Agent"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "locusagent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tracing = "0.1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSImage", "NSStatusItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString", "NSObject", "NSValue"] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = ["WKWebView", "WKWebViewConfiguration", "WKPreferences"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
